# active_learning_tutorial

./: .gitignore  231020-GenerateChallengeProblems.ipynb  231114-ALDemoV3.ipynb  ChallengeTutorial.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: 231114-ALDemoV3-checkpoint.ipynb
challenge_datasets/: N.nc  challenge1.nc  challenge2.nc  challenge2v2.nc  challenge2v3.nc  challenge2v4.nc  challenge3.nc  pluronic.nc  triangle.nc  triangleV2.nc
reference_sans/: FEB20101.SA4_NGB_Z284  FEB20107.ABS  FEB20107.SA4_NGB_Z290  FEB20125.ABS  FEB20125.SA4_NGB_Z308  high_q.ABS  low_q.ABS  med_q.ABS  notes.txt
tutlib/: GaussianProcess.py  VirtualInstrument.py  __init__.py  actively_learn.py  challenge1.py  challenge2.py  challenge3.py  lib.py  plot.py  util.py
tutlib/instruments/: N.py  __init__.py  challenge1.py  challenge2.py  challenge3.py  tutorial.py
