[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tutlib"
version = "0.0.1"

requires-python = ">=3.9"

dependencies = [
    "setuptools",
    "pip",
    "numpy",
    "xarray",
    "netcdf4",
    "pandas ",
    "scipy",
    "matplotlib",
    "seaborn",
    "mpltern",
    "bokeh",
    "scikit-learn",
    "tqdm",
    "bottleneck",
    "sasdata",
    "sasmodels",
    "sasview",
    "shapely",
    "tensorflow[and-cuda]",
    "gpflow>2",
]

[tool.setuptools]
packages = ["tutlib"]
